--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently 'nodemon index.js' 'cd client && yarn && yarn start'",
     "start": "node index.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d client/build",
     "build": "cd client && yarn && yarn build",
     "test": "cd client && yarn test"
   },
